--- a/tr/LC_MESSAGES/messages.po
+++ b/tr/LC_MESSAGES/messages.po
@@ -20,22 +20,22 @@ msgstr ""
 "Generated-By: Babel 2.5.1\n"
 
 msgid "The Pomodoro is running"
-msgstr "Pomodoro devam ediyor"
+msgstr "Pomodoro çalışıyor..."
 
 msgid "year"
 msgid_plural "years"
-msgstr[0] "yil"
-msgstr[1] "yil"
+msgstr[0] "yıl "
+msgstr[1] "yıl"
 
 msgid "month"
 msgid_plural "months"
 msgstr[0] "ay"
-msgstr[1] "aylar"
+msgstr[1] "ay"
 
 msgid "day"
 msgid_plural "days"
 msgstr[0] "gün"
-msgstr[1] "günler"
+msgstr[1] "gün"
 
 msgid "hour"
 msgid_plural "hours"
@@ -48,13 +48,13 @@ msgstr[0] "dakika"
 msgstr[1] "dakika"
 
 msgid "registered users spend on completing pomodoros today."
-msgstr "kayıtlı kullanıcılar bugün pomodoros'u tamamlamak için harcıyorlar"
+msgstr "bugün kayıtlı kullanıcılar tarafından pomodorolarını tamamlanmak için harcandı."
 
 msgid "registered users spend on completing pomodoros"
-msgstr "kayıtlı kullanıcılar pomodoros tamamlamaya harcıyor"
+msgstr "kayıtlı kullanıcılar tarafından pomodorolarını tamamlamak için harcandı."
 
 msgid "for all time"
-msgstr "tüm zamanlar için"
+msgstr "toplamda harcandı."
 
 msgid "close"
 msgstr "kapat"
@@ -66,10 +66,10 @@ msgid "Please reload the application."
 msgstr "Uygulamayı tekrar yükle"
 
 msgid "previous page"
-msgstr ""
+msgstr "önceki sayfa"
 
 msgid "next page"
-msgstr ""
+msgstr "sonraki sayfa"
 
 msgid "Are you sure want to delete"
 msgstr "Silmek istediğine emin misin"
@@ -81,13 +81,13 @@ msgid "cancel"
 msgstr "iptal"
 
 msgid "record"
-msgstr "rekor"
+msgstr "kaydet"
 
 msgid "Loading"
-msgstr ""
+msgstr "yükleniyor"
 
 msgid "Changes saved"
-msgstr "Kaydedilen değişiklikler"
+msgstr "Değişiklikler kaydedildi."
 
 msgid "Settings"
 msgstr "Ayarlar"
@@ -113,34 +113,34 @@ msgid "Register"
 msgstr "Kayıt ol"
 
 msgid "Connect"
-msgstr "Bağlayın"
+msgstr "Bağlan"
 
 msgid "Disconnect"
-msgstr "Bağlantısını kesin"
+msgstr "Bağlantıyı kes"
 
 msgid "Integration with Google"
-msgstr ""
+msgstr "Google ile kaydol"
 
 msgid "Login to the service using Google authentication."
-msgstr ""
+msgstr "Google hizmetlerini kullanarak giriş yap."
 
 msgid "Integration with Facebook"
-msgstr ""
+msgstr "Facebook ile kaydol."
 
 msgid "Login to the service using Facebook authentication."
-msgstr ""
+msgstr "Facebook hizmetlerini kullanarak giriş yap."
 
 msgid "Integration with Github"
-msgstr ""
+msgstr "Github ile kaydol."
 
 msgid "Login to the service using Github authentication."
-msgstr ""
+msgstr "Github hizmetlerini kullanarak giriş yap."
 
 msgid "Enable Telegram Bot"
-msgstr ""
+msgstr "Telegram Bot'unu aç"
 
 msgid "Get notifications, check history"
-msgstr ""
+msgstr "Bildirimleri al, tarihçeyi kontrol et"
 
 msgid "Application"
 msgstr "Uygulama"
@@ -173,7 +173,7 @@ msgid "Daily history"
 msgstr "Günlük geçmişi"
 
 msgid "Clear DONE history once per day"
-msgstr "DONE geçmişi günde bir kez temizle"
+msgstr "Tamamlananları günlük olarak temizle"
 
 msgid "At time"
 msgstr "zaman"
@@ -188,16 +188,16 @@ msgid "Add category"
 msgstr "Kategori ekle"
 
 msgid "Send Daily Reports"
-msgstr "Günlük Raporları Gönder"
+msgstr "Günlük Rapor Gönder"
 
 msgid "Send reports on email: "
-msgstr "E-postayla ilgili rapor gönder:"
+msgstr "Raporu e-postayla gönder:"
 
 msgid "Send reports on telegram"
-msgstr "Telgrafta rapor gönderme"
+msgstr "Raporu Telegram'la gönder:"
 
 msgid "Reports Time"
-msgstr ""
+msgstr "Rapor zamanı"
 
 msgid "Notifications"
 msgstr "Bildirimler"
@@ -206,13 +206,13 @@ msgid "Volume"
 msgstr "Ses"
 
 msgid "Play alarm sound"
-msgstr "Alarm sesi çal"
+msgstr "Alarm seslerini çal"
 
 msgid "Play ticking sound"
-msgstr "Tıkırtı sesi çal"
+msgstr "Arka plan seslerini çal"
 
 msgid "Play ticking sound while breaks"
-msgstr "Mola esnasında tiz ses çalın"
+msgstr "Mola esnasında arka plan seslerini çal"
 
 msgid "Notify when there is one minute left"
 msgstr "Bir dakika kaldığında haber ver"
@@ -254,13 +254,13 @@ msgid "Timer"
 msgstr "Zamanlayıcı"
 
 msgid "Schemes"
-msgstr "Şemalari"
+msgstr "Şemalar"
 
 msgid "Pomodoro duration:"
 msgstr "Pomodoro süresi:"
 
 msgid "in minutes"
-msgstr "dakika"
+msgstr "dakika içerisinde"
 
 msgid "Short break duration:"
 msgstr "Kısa mola süresi:"
@@ -272,19 +272,19 @@ msgid "Long break delay:"
 msgstr "Uzun mola gecikmesi:"
 
 msgid "in pomodoros"
-msgstr "pomodoro"
+msgstr "pomodorolarda"
 
 msgid "Auto start pomodoros"
 msgstr "Pomodoroları otomatik başlat"
 
 msgid "Don`t start next pomodoro if TODO is empty"
-msgstr "TODO boşsa, bir sonraki pomodoroya başlamayın"
+msgstr "Yapılacak işler listesi boşsa, bir sonraki pomodoroya başlama"
 
 msgid "Auto start breaks"
 msgstr "Molaları otomatik başlat"
 
 msgid "Daily Goal"
-msgstr "Günlük Gol"
+msgstr "Günlük Hedef"
 
 msgid "Sort by"
 msgstr "Göre sırala"
@@ -299,7 +299,7 @@ msgid "New"
 msgstr "Yeni"
 
 msgid "Done"
-msgstr "Tamam"
+msgstr "Tamamlanmış"
 
 msgid "Like"
 msgstr "Beğen"
@@ -307,7 +307,7 @@ msgstr "Beğen"
 msgid "like"
 msgid_plural "likes"
 msgstr[0] "beğen"
-msgstr[1] ""
+msgstr[1] "beğeniler"
 
 msgid "Write your ideas here"
 msgstr "Fikirlerinizi buraya yazın"
@@ -328,7 +328,7 @@ msgid "Cancel"
 msgstr "İptal"
 
 msgid "TODO list was updated."
-msgstr "TODO listesi güncellendi"
+msgstr "Yapılacaklar listesi güncellendi"
 
 msgid "Activities"
 msgstr "Aktiviteler"
@@ -340,34 +340,34 @@ msgid "Short description"
 msgstr "Kısa açıklama"
 
 msgid "Add Activity"
-msgstr "Aktiviteyi ekle"
+msgstr "Aktivite ekle"
 
 msgid "Add to TODO"
 msgstr "Yapılacaklara ekle"
 
 msgid "Add more"
-msgstr "Tekrar ekle"
+msgstr "Daha fazla ekle"
 
 msgid "Edit"
-msgstr "Düzenlemek"
+msgstr "Düzenle"
 
 msgid "save"
-msgstr ""
+msgstr "kaydet"
 
 msgid "Mark as daily task"
 msgstr "Günlük iş olarak işaretle"
 
 msgid "Click/tap to edit items."
-msgstr "Öğeleri düzenlemek için çift tıklayın/dokunun."
+msgstr "Öğeleri düzenlemek için çift tıkla."
 
 msgid "Click on a number to add more."
-msgstr "Daha fazla eklemek için bir numarayı tıklayın."
+msgstr "Daha fazla eklemek için bir rakama tıkla."
 
 msgid "The list is empty"
 msgstr "Liste boş"
 
 msgid "Try to mark TODO as activity or use the form above"
-msgstr "Görevi aktivite olarak işaretleyin veya yukarıdaki formu kullanın"
+msgstr "Yapılacak işi aktivite olarak işaretle veya yukarıdaki formu kullan"
 
 msgid "Preferences"
 msgstr "Tercihler"
@@ -376,7 +376,7 @@ msgid "Congratulations!"
 msgstr "Tebrikler!"
 
 msgid "Daily Goal Completed."
-msgstr "Günlük gol tamamlandı."
+msgstr "Günlük hedef tamamlandı."
 
 msgid "DONE"
 msgstr "TAMAMLANDI"
@@ -391,40 +391,40 @@ msgid "Records are empty"
 msgstr "Kayıtlar boş"
 
 msgid "Try to complete some pomodoros above"
-msgstr "Yukarıdaki pomodorolardan bazılarını tamamlamayı deneyin"
+msgstr "Yukarıdaki pomodorolardan bazılarını tamamlamayı dene"
 
 msgid "delays"
-msgstr "gecikme"
+msgstr "gecikmeler"
 
 msgid "focus"
-msgstr ""
+msgstr "odaklan"
 
 msgid "Clear the list"
 msgstr "Listeyi temizle"
 
 msgid "You are not signed."
-msgstr "Sen imzalanmadın"
+msgstr "Giriş yapmadın."
 
 msgid "Work history won`t be saved."
-msgstr "İş geçmişi kurtarılamaz."
+msgstr "İş geçmişi kaydedilmeyecek."
 
 msgid "One minute left"
 msgstr "bir dakika kaldı"
 
 msgid "Break is over."
-msgstr ""
+msgstr "Moda tamamlandı."
 
 msgid "The next pomodoro will go better!"
-msgstr "Bir sonraki Pomodoro daha iyi geçecektir"
+msgstr "Bir sonraki Pomodoro daha iyi olacak!"
 
 msgid "Pomodoro is finished."
 msgstr "Pomodoro tamamlandı."
 
 msgid "Have a short break."
-msgstr "Mola alın."
+msgstr "Kısa bir mola al."
 
 msgid "Have a long break."
-msgstr "Mola alın."
+msgstr "Uzun bir mola al."
 
 msgid "Tune the timer"
 msgstr "Zamanlayıcıyı ayarla"
@@ -460,7 +460,7 @@ msgid "delay"
 msgstr "gecikme"
 
 msgid "Great work! TODO list is empty."
-msgstr "Harika iş! TODO listesi boş."
+msgstr "Tebrikler! Yapılacaklar listesi boş."
 
 msgid "TODO"
 msgstr "Yapılacaklar"
@@ -481,14 +481,14 @@ msgid "TODO list is empty"
 msgstr "Yapılacaklar listesi boş"
 
 msgid "Congratulations! You have finished all your tasks."
-msgstr "Tebrikler! Tüm görevlerinizi bitirdiniz."
+msgstr "Tebrikler! Tüm görevleri bitirdin."
 
 msgid "Try to add some tasks use the form above"
-msgstr "Yukarıdaki formu kullanmak için birkaç görev ekleyin"
+msgstr "Yukarıdaki formu kullanmak için birkaç görev ekle"
 
 msgid "Drag&Drop/Touch to sort items."
 msgstr ""
-"Öğeleri düzenlemek için çift tıklayın/dokunun. Sıralamak için "
+"Öğeleri düzenlemek için çift tıkla ya da sürükle."
 "Sürükle/Taşı."
 
 msgid "Time"
@@ -498,19 +498,19 @@ msgid "Date"
 msgstr "Tarih"
 
 msgid "Try to complete some pomodoros or choose a different period"
-msgstr "Birkaç pomodoro bitirmeyi deneyin veya farklı bir zaman aralığı seçin"
+msgstr "Birkaç pomodoro bitirmeyi dene veya farklı bir zaman aralığı seç"
 
 msgid "Export the records as CSV"
 msgstr "Kayıtları CSV olarak dışarı aktar"
 
 msgid "Import records from CSV"
-msgstr "CSV'den kayıtları içe aktarın"
+msgstr "CSV'den içe aktar"
 
 msgid "Apply"
-msgstr "Uygulamak"
+msgstr "Uygula"
 
 msgid "Custom"
-msgstr "Seçmek"
+msgstr "Düzenle"
 
 msgid "January"
 msgstr "Ocak"
@@ -525,7 +525,7 @@ msgid "April"
 msgstr "Nisan"
 
 msgid "May"
-msgstr "Mayis"
+msgstr "Mayıs"
 
 msgid "June"
 msgstr "Haziran"
@@ -543,10 +543,10 @@ msgid "October"
 msgstr "Ekim"
 
 msgid "November"
-msgstr "Kasim"
+msgstr "Kasım"
 
 msgid "December"
-msgstr "Aralik"
+msgstr "Aralık"
 
 msgid "Today"
 msgstr "Bugün"
@@ -579,10 +579,10 @@ msgid "Last 180 days"
 msgstr "Son 180 günde"
 
 msgid "%1$s records were imported"
-msgstr "%1$s kayıt alındı"
+msgstr "%1$s kayıt içeri alındı"
 
 msgid "Import was failed. Check your CSV and try again."
-msgstr "İthalat başarısız oldu. CSV'nizi kontrol edin ve tekrar deneyin."
+msgstr "İçeri alma işlemi başarısız oldu. CSV'yi kontrol et ve tekrar dene."
 
 msgid "time"
 msgstr "zaman"
@@ -594,7 +594,7 @@ msgid "Activity by days"
 msgstr "Günlere göre etkinlik"
 
 msgid "Activity by weeks"
-msgstr "Haftaya göre etkinlik"
+msgstr "Haftalara göre etkinlik"
 
 msgid "Activity by months"
 msgstr "Aylara göre faaliyet"
@@ -606,7 +606,7 @@ msgid "median"
 msgstr "medyan"
 
 msgid "Pomodoros"
-msgstr "Pomodoro"
+msgstr "Pomodorolar"
 
 msgid "Median per day"
 msgstr "Günlük ortalama"
@@ -624,7 +624,7 @@ msgid "Logout"
 msgstr "Çıkış"
 
 msgid "Sign Up / Login"
-msgstr "Kayıt / Giriş"
+msgstr "Kayıt Ol / Giriş Yap"
 
 msgid "as Google user"
 msgstr "Google üzerinden"
@@ -636,16 +636,16 @@ msgid "as Github user"
 msgstr "Github üzerinden"
 
 msgid "Please, login to view your stats"
-msgstr "Çalışma kaydınızı tutmak için giriş yapın"
+msgstr "İstatistiklerini görmek için giriş yap"
 
 msgid "View"
-msgstr ""
+msgstr "Görüntüleme"
 
 msgid "Release Notes"
 msgstr "Sürüm notları"
 
 msgid "Provide Feedback"
-msgstr "Geribildirim sağlamak"
+msgstr "Geribildirimde bulun"
 
 msgid "Start"
 msgstr "Başlat"
@@ -654,7 +654,7 @@ msgid "Pause"
 msgstr "Duraklat"
 
 msgid "Skip"
-msgstr "Geç"
+msgstr "Atla"
 
 msgid "Resume"
 msgstr "Devam et"
@@ -666,19 +666,19 @@ msgid "Stop"
 msgstr "Durdur"
 
 msgid "Show window"
-msgstr "Pencere göster"
+msgstr "Pencereyi göster"
 
 msgid "Configure"
 msgstr "Yapılandır"
 
 msgid "Quit"
-msgstr "Çikmak"
+msgstr "Çık"
 
 msgid "Feedback"
 msgstr "Geri Bildirim"
 
 msgid "Login to view your stats"
-msgstr "Çalışma kaydınızı tutmak için giriş yapın"
+msgstr "İstatistiklerini görmek için giriş yap"
 
 msgid "version"
 msgstr "sürüm"
@@ -687,7 +687,7 @@ msgid "Privacy Policy"
 msgstr "Gizlilik Politikası"
 
 msgid "Support the Project"
-msgstr "Projeye destek"
+msgstr "Projeye destek ol"
 
 msgid "What is it?"
 msgstr "Bu nedir?"
@@ -698,21 +698,15 @@ msgid ""
 "“the ticking clock”, especially when it involves a deadline, leads to "
 "ineffective work and study habits which in turn lead to procrastination."
 msgstr ""
-"Pomodoro tekniği herhangi bir görev için kullanabileceğiniz bir zaman "
-"yönetim tekniğidir. Birçok kişi için zaman bir düşmandır. “Saat tik "
-"seslerinin” özellikle yaklaşan zaman sınırlarında oluşturduğu kaygı "
-"başarısız çalışmalara ve kötü çalışma alışkanlıklarına yol açar ve buda "
-"işin ertelenmesine sebebiyet verir."
+"Pomodoro tekniği herhangi bir işi yapmak için kullanabileceğiniz bir zaman "
+"yönetim tekniğidir. Birçok kişi için zaman yönetimi oldukça zordur. Etkin olmayan çalışma alışkanlıkları ve teslim ya da bitirme zamanı yaklaşıktıkça duyulan saat tik-tak'ları anksiyeteye neden oluyor.
 
 msgid ""
 "The aim of the Pomodoro Technique is to use time as a valuable ally in "
 "accomplishing what we want to do in the way we want to do it, and to "
 "enable us to improve continually the way we work or study."
 msgstr ""
-"Pomodoro Tekniğinin amacı gerçekleştirmek istediğimiz görevin istediğimiz"
-" biçimde gerçekleştirilmesi, zamanın değerli bir müttefik olarak ele "
-"alınması ve çalışma veya öğrenme sürecimizi sürekli olarak geliştirmemize"
-" imkan sağlamasıdır."
+"Pomodoro tekniğinin amacı zamanı verimli kullanarak yapmak istediğimiz şeyleri tamamlamak ve işimizi/çalışmamızı geliştirmeye katkıda bulunmaktır."
 
 msgid "The Goals"
 msgstr "Hedefler"
@@ -727,30 +721,30 @@ msgstr ""
 "kullanarak şunları yapabilirsiniz:"
 
 msgid "Alleviate anxiety linked to beginning"
-msgstr "Hedeflerinizle bağlantılı olan kaygılarınızı hafifletin"
+msgstr "Bir işe başlamakla ilgili kaygılarınızı hafifletebilirsiniz."
 
 msgid "Enhance focus and concentration by cutting down on interruptions"
-msgstr "Odaklanma ve konsantrasyon kabiliyetlerinizi geliştirin"
+msgstr "Odaklanma ve konsantrasyon kabiliyetlerinizi geliştirebilirsiniz."
 
 msgid "Increase awareness of your decisions"
-msgstr "Aldığınız kararlardaki farkındalığınızı arttırın"
+msgstr "Aldığınız kararlardaki farkındalığınızı artırabilirsiniz."
 
 msgid "Boost motivation and keep it constant"
-msgstr "Motivasyonunuzu yükseltin ve sabit kılın"
+msgstr "Motivasyonunuzu yükseltebilir ve devamlı kılabilirsiniz."
 
 msgid "Bolster the determination to achieve your goals"
-msgstr "Hedeflerinize ulaşmak için kararlılığınızı arttırın"
+msgstr "Hedeflerinize ulaşmak için kararlılığınızı artırabilirsiniz."
 
 msgid "Refine the estimation process, both in qualitative and quantitative terms "
-msgstr "Nicel ve nitel gözlemlerinizdeki tahmin gücünüzü arttırın"
+msgstr "Nicel ve nitel gözlemlerinizdeki tahmin gücünüzü artırabilirsiniz."
 
 msgid "Improve your work or study process"
-msgstr "Çalışma veya öğrenme sürecinizi geliştirin"
+msgstr "Çalışma veya öğrenme sürecinizi geliştirebilirsiniz."
 
 msgid ""
 "Strengthen your resolve to keep on applying yourself in the face of "
 "complex situations"
-msgstr "Karmaşık durumlar karşısında çözüm üretme kabiliyetinizi güçlendirin"
+msgstr "Karmaşık durumlar karşısında çözüm üretme kabiliyetinizi güçlendirebilirsiniz."
 
 msgid "The Basics"
 msgstr "Temeller"
@@ -766,10 +760,10 @@ msgid "Start working:"
 msgstr "Çalışmaya başlayın:"
 
 msgid "Start the Pomodoro timer"
-msgstr "Pomodoro zamanlayıcısını başlat"
+msgstr "Pomodoro zamanlayıcısını başlatın"
 
 msgid "Work until the Pomodoro rings"
-msgstr "Pomodoro bitene kadar çalış"
+msgstr "Pomodoro bitene kadar çalışın"
 
 msgid "Take a short break (3-5 minutes)"
 msgstr "Kısa bir mola alın (3-5 dakika)"
@@ -778,30 +772,30 @@ msgid ""
 "Keep on working, Pomodoro after Pomodoro, until the task at hand is "
 "finished. Every 4 Pomodoros take a longer break, (15–30 minutes)."
 msgstr ""
-"Elinizdeki görev bitinciye kadar Pomodoro'dan Pomodoro'ya çalışmaya devam"
+"Elinizdeki iş listesi bitinciye kadar Pomodoro'dan Pomodoro'ya çalışmaya devam"
 " edin. Her 4 Pomodoro'da uzun bir mola alın. (15-30 dakika)"
 
 msgid "Rules & Tips"
 msgstr "Kurallar & İpuçları"
 
 msgid "If a task takes more than 5–7 Pomodoros, break it down"
-msgstr "İşiniz 5-7 Pomodoro'dan fazla sürüyorsa abartıya kaçmayın"
+msgstr "İşiniz 5-7 Pomodoro'dan fazla sürüyorsa abartıya kaçmayın ve zamana yayın."
 
 msgid ""
 "If it takes less than one Pomodoro, add it up, and combine  it with "
 "another task"
 msgstr ""
-"İşiniz bir Pomodoro'dan daha az sürüyorsa diğerlerine dahil edin, başka "
+"İşiniz bir Pomodoro'dan daha az sürüyorsa başka "
 "bir görev ile birleştirin"
 
 msgid "Once a Pomodoro begins, it has to ring"
-msgstr "Pomodoro bir kere başladıktan sonra bitmek zorundadır"
+msgstr "Pomodoroyu bir kere başladıktan sonra bitirmek zorundasınız."
 
 msgid "The next Pomodoro will go better"
-msgstr "Bir sonraki Pomodoro daha iyi geçecektir"
+msgstr "Bir sonraki Pomodoro daha iyi olacak!"
 
 msgid "Login to the service and track your progress"
-msgstr "Sürecinizi takip etmek için giriş yapın"
+msgstr "Gelişimini takip etmek için giriş yap"
 
 msgid ""
 "The Pomodoro Technique shouldn’t be used for activities you do in your "
@@ -812,21 +806,21 @@ msgstr ""
 
 #, python-format
 msgid "%s here's your Daily report for %s"
-msgstr ""
+msgstr " işte günlük Pomodoro raporun"
 
 msgid "You spent"
-msgstr ""
+msgstr "Harcadığınız zaman"
 
 msgid "and"
-msgstr ""
+msgstr "ve"
 
 msgid "on"
 msgstr ""
 
 msgid "pomodoro"
 msgid_plural "pomodoros"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "pomododor "
+msgstr[1] "pomodorolar"
 
 msgid "Of those"
 msgstr ""
@@ -835,19 +829,19 @@ msgid "were"
 msgstr ""
 
 msgid "There are completed tasks"
-msgstr ""
+msgstr "Tamamlanan işler"
 
 msgid "Please don't send me these awesome daily reports"
-msgstr ""
+msgstr "Lütfen bana günlük raporlar gönderme"
 
 #~ msgid "test"
-#~ msgstr ""
+#~ msgstr "test"
 
 #~ msgid "Hide Pomodoro-Tracker"
-#~ msgstr "Saklamak Pomodoro-Tracker"
+#~ msgstr "Pomodoro-Tracker'ı gizle"
 
 #~ msgid "Hide Others"
-#~ msgstr "Diğerlerini sakla"
+#~ msgstr "Diğerlerini gizle"
 
 #~ msgid "Show All"
 #~ msgstr "Hepsini Göster"
@@ -859,7 +853,7 @@ msgstr ""
 #~ msgstr "Tam ekrana geç"
 
 #~ msgid "Connect Telegram Bot"
-#~ msgstr ""
+#~ msgstr "Telegram Bot'u ile bağlan"
 
 #~ msgid "LOADING"
 #~ msgstr "YÜKLENIYOR"
@@ -868,7 +862,7 @@ msgstr ""
 #~ msgstr "Sıralamak için Sürükle/Taşı"
 
 #~ msgid "Great work! Daily Goal completed."
-#~ msgstr ""
+#~ msgstr "Muhteşem! Günlük hedef tamamlandı."
 
 #~ msgid "Remove"
 #~ msgstr "Sil"
@@ -883,8 +877,8 @@ msgstr ""
 #~ msgstr "GECIKME"
 
 #~ msgid "in seconds"
-#~ msgstr "saniyeler içinde"
+#~ msgstr "saniye içinde"
 
 #~ msgid "Break is over. The next pomodoro will go better!"
-#~ msgstr "Mola bitti. Sıradaki pomodoro daha iyi geçecek!"
+#~ msgstr "Mola bitti. Sıradaki pomodoro daha iyi olacak!"
 
